<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.kapu.bluetoothremotecontrol.MainActivity">
    <item
        android:id="@+id/action_connect"
        android:orderInCategory="100"
        android:title="@string/action_connect"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_unbind"
        android:orderInCategory="101"
        android:title="@string/action_unbind"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:orderInCategory="102"
        android:title="@string/action_export"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import"
        android:orderInCategory="103"
        android:title="@string/action_import"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_terminal"
        android:orderInCategory="104"
        android:title="@string/action_terminal"
        app:showAsAction="never" />
</menu>
